No longer using cdn for w3-css, got registration working again, fixed styling bug on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -22,7 +22,7 @@ a {
 
 .w3-main {
     margin-left: 205px;
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
 .profile-picture {
@@ -62,6 +62,6 @@ footer {
 }
 
 .w3-sidenav {
-    margin-top: -26px;
+    margin-top: -16px;
 }
 
